--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,16 +32,16 @@ jobs:
           docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/realty-guide-worker:latest --build-arg MODE=worker .
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/realty-guide-worker:latest
 
-      - name: Deploy API to Railway
-        uses: bervProject/railway-deploy@main
-        with:
-          service-id: ${{ secrets.RAILWAY_SERVICE_ID_API }}
-          railway-token: ${{ secrets.RAILWAY_TOKEN }}
-          image: ${{ secrets.DOCKER_HUB_USERNAME }}/realty-guide-api:latest
-
-      - name: Deploy Worker to Railway
-        uses: bervProject/railway-deploy@main
-        with:
-          service-id: ${{ secrets.RAILWAY_SERVICE_ID_WORKER }}
-          railway-token: ${{ secrets.RAILWAY_TOKEN }}
-          image: ${{ secrets.DOCKER_HUB_USERNAME }}/realty-guide-worker:latest
+#      - name: Deploy API to Railway
+#        uses: bervProject/railway-deploy@main
+#        with:
+#          service-id: ${{ secrets.RAILWAY_SERVICE_ID_API }}
+#          railway-token: ${{ secrets.RAILWAY_TOKEN }}
+#          image: ${{ secrets.DOCKER_HUB_USERNAME }}/realty-guide-api:latest
+#
+#      - name: Deploy Worker to Railway
+#        uses: bervProject/railway-deploy@main
+#        with:
+#          service-id: ${{ secrets.RAILWAY_SERVICE_ID_WORKER }}
+#          railway-token: ${{ secrets.RAILWAY_TOKEN }}
+#          image: ${{ secrets.DOCKER_HUB_USERNAME }}/realty-guide-worker:latest
