--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,12 @@ posthog
 watchdog
 pydantic
 redis==5.0.7
+googlemaps==4.10.0
+langchain-community==0.2.6
+docarray==0.40.0
+langchain-openai==0.1.14
+jq==1.8.0a2
+playwright==1.41.0
+duckduckgo-search==6.1.9
+jupyter==1.0.0
+supabase==2.5.1
