--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
       - "8000:8000"
     volumes:
       - .:/app
+    env_file:
+      - .env
 #    depends_on:
 #      - rabbitmq
 #      - redis
@@ -39,6 +41,8 @@ services:
       - POSTHOG_HOST=${POSTHOG_HOST}
     volumes:
       - .:/app
+    env_file:
+      - .env
 #    depends_on:
 #      - rabbitmq
 #      - redis
@@ -49,29 +53,32 @@ services:
       - CELERY_BROKER_URL=${CELERY_BROKER_URL}
       - FLOWER_PORT=5555
       - FLOWER_UNAUTHENTICATED_API=true
+      - RABBITMQ_API_URL=http://rabbitmq:15672/api/
+      - FLOWER_USER=${RABBITMQ_USER}
+      - FLOWER_PASSWORD=${RABBITMQ_PASSWORD}
     ports:
       - "5555:5555"
-#    depends_on:
-#      - rabbitmq
-#
-#  rabbitmq:
-#    image: "rabbitmq:3-management"
-#    ports:
-#      - "5672:5672"
-#      - "15672:15672"
-#    environment:
-#      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER}
-#      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD}
-#    volumes:
-#      - rabbitmq-data:/var/lib/rabbitmq
-#
-#  redis:
-#    image: "redis:latest"
-#    ports:
-#      - "6379:6379"
-#    volumes:
-#      - redis-data:/data
-#
-#volumes:
-#  rabbitmq-data:
-#  redis-data:
+    depends_on:
+      - rabbitmq
+
+  rabbitmq:
+    image: "rabbitmq:3-management"
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD}
+    volumes:
+      - rabbitmq-data:/var/lib/rabbitmq
+
+  redis:
+    image: "redis:latest"
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+
+volumes:
+  rabbitmq-data:
+  redis-data:
